--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "files.associations": {
+    "*.img": "hexdump",
     "alloc.h": "c",
     "iostream": "cpp",
     "stdio.h": "c",
@@ -12,7 +13,8 @@
     "atomic": "c",
     "cstring": "cpp",
     "ostream": "cpp",
-    "xlocale": "cpp"
+    "xlocale": "cpp",
+    "xiosbase": "c"
   },
   "code-runner.executorMap": {
     "cpp": "cd $dir && g++ -std=c++11 $fileName -D LOCAL -o D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe && D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe",
