更新了终端配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,11 +14,13 @@
     "cstring": "cpp",
     "ostream": "cpp",
     "xlocale": "cpp",
-    "xiosbase": "c"
+    "xiosbase": "c",
+    "cstdlib": "c"
   },
   "code-runner.executorMap": {
     "cpp": "cd $dir && g++ -std=c++11 $fileName -D LOCAL -o D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe && D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe",
     "c": " cd $dir && gcc $fileName -D LOCAL -o D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe && D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe"
   },
-  "asoul.reminderViewIntervalInMinutes": 60
+  "asoul.reminderViewIntervalInMinutes": 60,
+  "files.encoding": "gbk"
 }
