--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
   "files.encoding": "gbk",
   "writeCnblog": {
     "rpcUrl": "https://rpc.cnblogs.com/metaweblog/ladies",
-    "userName": "RochesterBen"
+    "userName": "RochesterBen",
+    "blogWorkspace": "D:\\workstation\\cnblogLocal"
   }
 }
