--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ exe/’€∞Î≤È’“.exe
 exe/d.exe
 exe/ee.exe
 exe/find.exe
+.vscode backup/c_cpp_properties.json
+.vscode backup/launch.json
+.vscode backup/settings.json
+.vscode backup/tasks.json
