update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ exe/find.exe
 .vscode backup/launch.json
 .vscode backup/settings.json
 .vscode backup/tasks.json
+Experiment10HuffmanTree/reference.md
+SunShineGroup/ans.md
