--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,8 @@ exe/find.exe
 .vscode backup/settings.json
 .vscode backup/tasks.json
 Experiment10HuffmanTree/reference.md
-SunShineGroup/ans.md
+exe/1146.exe
+exe/GraphByAdjacencyList.exe
+exe/header.exe
+exe/shengbin.exe
+exe/yanghui.exe
