--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@ exe/GraphByAdjacencyList.exe
 exe/header.exe
 exe/shengbin.exe
 exe/yanghui.exe
+exe/Disjoint Set Or Union-Find .exe
+exe/Disjoint Set Or Union-Find.exe
+exe/DisjointSetOrUnion-Find.exe
+exe/Kruskal MinimumSpanningTreeAlgorithm.exe
+exe/Kruskal¡¯s Minimum Spanning Tree Algorithm.exe
+exe/Prim Mst algorithm(AdjacencyMatrix).exe
+exe/Kruskal¡¯s Minimum Spanning Tree Algorithm.exe
