--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,23 @@ exe/Kruskal MinimumSpanningTreeAlgorithm.exe
 exe/Kruskal¡¯s Minimum Spanning Tree Algorithm.exe
 exe/Prim Mst algorithm(AdjacencyMatrix).exe
 exe/Kruskal¡¯s Minimum Spanning Tree Algorithm.exe
+tests_for_grammer/8.cpp
+tests_for_grammer/438. Find All Anagrams in a String.md
+tests_for_grammer/506.md
+tests_for_grammer/594.md
+tests_for_grammer/help2.c
+tests_for_grammer/help3.c
+tests_for_grammer/print.cpp
+tests_for_grammer/reference.txt
+tests_for_grammer/shengbin.cpp
+tests_for_grammer/test.cpp
+tests_for_grammer/test2.c
+tests_for_grammer/Untitled-1.ini
+tests_for_grammer/yanghui.cpp
+tests_for_grammer/yuanjiahao.cpp
+exe/1816. Truncate Sentence.exe
+exe/Dijkstra shortest path algorithm .exe
+exe/Dijkstra shortest path algorithm(AdjacencyList).exe
+exe/Kruskal¡¯s Minimum Spanning Tree Algorithm.exe
+exe/Prim MST algorithm(AdjacencyList).exe
+exe/Topological Sorting.exe
