update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,35 @@ exe/Dijkstra shortest path algorithm(AdjacencyList).exe
 exe/Kruskal¡¯s Minimum Spanning Tree Algorithm.exe
 exe/Prim MST algorithm(AdjacencyList).exe
 exe/Topological Sorting.exe
+math/deom.wlnb
+math/ma.md
+math/mathSolt.ipynb
+python/battery_show.py
+python/demo.ipynb
+SunShineGroup/DashChart.png
+SunShineGroup/SunInSolarSystem.png
+SunShineGroup/SunInTheUniverse.png
+math/deom.wlnb
+math/ma.md
+math/mathSolt.ipynb
+SunShineGroup/DashChart.png
+SunShineGroup/SunInSolarSystem.png
+SunShineGroup/SunInTheUniverse.png
+math/deom.wlnb
+math/ma.md
+math/mathSolt.ipynb
+SunShineGroup/DashChart.png
+SunShineGroup/SunInSolarSystem.png
+SunShineGroup/SunInTheUniverse.png
+math/deom.wlnb
+math/ma.md
+math/mathSolt.ipynb
+SunShineGroup/DashChart.png
+SunShineGroup/SunInSolarSystem.png
+SunShineGroup/SunInTheUniverse.png
+math/deom.wlnb
+math/ma.md
+math/mathSolt.ipynb
+SunShineGroup/DashChart.png
+SunShineGroup/SunInSolarSystem.png
+SunShineGroup/SunInTheUniverse.png
