--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,6 @@ math/mathSolt.ipynb
 SunShineGroup/DashChart.png
 SunShineGroup/SunInSolarSystem.png
 SunShineGroup/SunInTheUniverse.png
+tests_for_grammer/backup.c
+tests_for_grammer/backup.c
+tests_for_grammer/IOCCC1.c
