--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,11 @@ SunShineGroup/SunInTheUniverse.png
 tests_for_grammer/backup.c
 tests_for_grammer/backup.c
 tests_for_grammer/IOCCC1.c
+exe/Floyd_Warshell Algorithm(AdjacencyMatrix).exe
+exe/Floyd-Warshell Algorithm(AdjacencyMatrix).exe
+exe/FloydWarshell Algorithm(AdjacencyMatrix).exe
+exe/FloydWarshell Path reconstruction.exe
+exe/IOCCC1.exe
+exe/Kruskal¡¯s Minimum Spanning Tree Algorithm.exe
+tests_for_grammer/floydWarshell.java
+exe/Kruskal¡¯s Minimum Spanning Tree Algorithm.exe
