--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
   "version": "2.0.0",
   "configurations": [
     {
+      "name": "Python: 当前文件",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal"
+    },
+    {
       "name": "C/C++",
       "type": "cppdbg",
       "request": "launch",
@@ -13,7 +20,7 @@
       "console": false,
       "MIMode": "gdb",
       "miDebuggerPath": "D://workstation//VSCode_for_c//c_path//mingw64//bin//gdb.exe",
-      "preLaunchTask": "gcc", //这里和task.json的label相对应
+      "preLaunchTask": "C/C++: g++.exe 生成活动文件", //这里和task.json的label相对应
       "setupCommands": [
         {
           "description": "Enable pretty-printing for gdb",
