--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,7 @@ exe/IOCCC1.exe
 exe/Kruskal¡¯s Minimum Spanning Tree Algorithm.exe
 tests_for_grammer/floydWarshell.java
 exe/Kruskal¡¯s Minimum Spanning Tree Algorithm.exe
+exe/1.exe
+exe/KeyPath IN AOE Net.exe
+exe/Longest Path Algorithm.exe
+exe/LongestPath.exe
