--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,16 @@ exe/1.exe
 exe/KeyPath IN AOE Net.exe
 exe/Longest Path Algorithm.exe
 exe/LongestPath.exe
+.VSCodeCounter/2021-10-30_23-45-32/details.md
+.VSCodeCounter/2021-10-30_23-45-32/results.csv
+.VSCodeCounter/2021-10-30_23-45-32/results.md
+.VSCodeCounter/2021-10-30_23-45-32/results.txt
+tests_for_grammer/copilot.js
+tests_for_grammer/LongestPath.cpp
+math/deom.wlnb
+math/ma.md
+math/mathSolt.ipynb
+.VSCodeCounter/2021-10-30_23-45-32/details.md
+.VSCodeCounter/2021-10-30_23-45-32/results.csv
+.VSCodeCounter/2021-10-30_23-45-32/results.md
+.VSCodeCounter/2021-10-30_23-45-32/results.txt
