--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,18 @@ math/mathSolt.ipynb
 .VSCodeCounter/2021-10-30_23-45-32/results.csv
 .VSCodeCounter/2021-10-30_23-45-32/results.md
 .VSCodeCounter/2021-10-30_23-45-32/results.txt
+exe/file.exe
+.VSCodeCounter/2021-10-30_23-45-32/details.md
+.VSCodeCounter/2021-10-30_23-45-32/results.csv
+.VSCodeCounter/2021-10-30_23-45-32/results.md
+.VSCodeCounter/2021-10-30_23-45-32/results.txt
+.VSCodeCounter/2021-12-17_19-13-14/details.md
+.VSCodeCounter/2021-12-17_19-13-14/results.csv
+.VSCodeCounter/2021-12-17_19-13-14/results.md
+.VSCodeCounter/2021-12-17_19-13-14/results.txt
+exe/Binary Search Tree.exe
+exe/Disjoint Set Union by Rank.exe
+exe/GraphByAdjacency.exe
+exe/h3.exe
+exe/Binary Search Algo.exe
+exe/h4.exe
