--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,8 @@ exe/h4.exe
 exe/leetcode1078.exe
 tests_for_grammer/leetcode1078.c
 tests_for_grammer/strcatFun.c
+exe/825. Friends Of Appropriate Ages.exe
+SunShineGroup/DashChart.png
+SunShineGroup/SunInSolarSystem.png
+SunShineGroup/SunInTheUniverse.png
+genericity泛型/堆栈的泛型模拟.c
