--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,49 @@ SunShineGroup/DashChart.png
 SunShineGroup/SunInSolarSystem.png
 SunShineGroup/SunInTheUniverse.png
 genericity泛型/堆栈的泛型模拟.c
+tests_for_grammer/1345.cpp
+tests_for_grammer/1036. Escape a Large Maze.cpp
+tests_for_grammer/backup.c
+tests_for_grammer/ccfpolan.cpp
+tests_for_grammer/help.c
+tests_for_grammer/leetcode14test.c
+tests_for_grammer/MM.c
+tests_for_grammer/MM2.c
+tests_for_grammer/new.c
+tests_for_grammer/new2.c
+tests_for_grammer/test.py
+Other/Test/8.cpp
+Other/Test/438. Find All Anagrams in a String.md
+Other/Test/506.md
+Other/Test/594.md
+Other/Test/1036. Escape a Large Maze.cpp
+Other/Test/1345.cpp
+Other/Test/backup.c
+Other/Test/ccfpolan.cpp
+Other/Test/copilot.js
+Other/Test/floydWarshell.java
+Other/Test/h1.cpp
+Other/Test/h2.c
+Other/Test/h3.c
+Other/Test/h4.c
+Other/Test/help.c
+Other/Test/help2.c
+Other/Test/help3.c
+Other/Test/IOCCC1.c
+Other/Test/leetcode14test.c
+Other/Test/leetcode1078.c
+Other/Test/LongestPath.cpp
+Other/Test/MM.c
+Other/Test/MM2.c
+Other/Test/new.c
+Other/Test/new2.c
+Other/Test/print.cpp
+Other/Test/reference.txt
+Other/Test/shengbin.cpp
+Other/Test/strcatFun.c
+Other/Test/test.cpp
+Other/Test/test.py
+Other/Test/test2.c
+Other/Test/Untitled-1.ini
+Other/Test/yanghui.cpp
+Other/Test/yuanjiahao.cpp
