暴力;二进制枚举;状态dp;dfs;dfs+lambda

--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,9 @@ Other/Test/test2.c
 Other/Test/Untitled-1.ini
 Other/Test/yanghui.cpp
 Other/Test/yuanjiahao.cpp
+exe/艾尔登法环.exe
+exe/艾尔登法环.exe
+exe/艾尔登法环.exe
+exe/艾尔登法环.exe
+Other/Funny/艾尔登法环.c
+exe/艾尔登法环.exe
