--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,12 +12,12 @@
       "name": "C/C++",
       "type": "cppdbg",
       "request": "launch",
-      "program": "D:\\workstation\\VSCode_for_c\\c_programming\\exe\\${fileBasenameNoExtension}.exe",
+      "program": "${fileWorkspaceFolder}\\exe\\${fileBasenameNoExtension}.exe",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [],
-      "console": false,
+      "externalConsole": false,
       "MIMode": "gdb",
       "miDebuggerPath": "D://workstation//VSCode_for_c//c_path//mingw64//bin//gdb.exe",
       "preLaunchTask": "C/C++: g++.exe 生成活动文件", //这里和task.json的label相对应
