--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,8 +36,8 @@
     "unordered_map": "c"
   },
   "code-runner.executorMap": {
-    "cpp": "cd $dir && g++ -std=c++11 $fileName -D LOCAL -o D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe && D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe",
-    "c": " cd $dir && gcc $fileName -D LOCAL -o D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe && D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe ", //结尾添加" > log.txt "结果输出到log.txt
+    "cpp": "cd $dir && g++ -std=c++11 -finput-charset=GBK -fexec-charset=utf-8 $fileName -D LOCAL -o D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe && D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe",
+    "c": " cd $dir && gcc $fileName -finput-charset=GBK -fexec-charset=utf-8 -D LOCAL -o D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe && D:\\workstation\\VSCode_for_c\\c_programming\\exe\\$fileNameWithoutExt.exe ", //结尾添加" > log.txt "结果输出到log.txt
     "java": "cd $dir && javac $fileName && java $fileNameWithoutExt"
   },
   "asoul.reminderViewIntervalInMinutes": 30,
@@ -54,5 +54,8 @@
     "*.md": "default"
   },
   "jupyter.kernels.filter": [],
-  "jupyter.themeMatplotlibPlots": true
+  "jupyter.themeMatplotlibPlots": true,
+  "workbench.colorCustomizations": {
+    "editorIndentFuide.background": "#ff0000"
+  }
 }
