--- a/.gitignore
+++ b/.gitignore
@@ -1,149 +1,7 @@
-.vscodebackup/settings.json
-.vscodebackup/tasks.json
-tests_for_grammer/power_function.cpp
-tests_for_grammer/test_for_switch.c
-genericity泛型/堆栈的泛型模拟.c
-.vscode backup/c_cpp_properties.json
-.vscode backup/launch.json
-.vscode backup/settings.json
-.vscode backup/tasks.json
 Experiment10HuffmanTree/reference.md
-tests_for_grammer/8.cpp
-tests_for_grammer/438. Find All Anagrams in a String.md
-tests_for_grammer/506.md
-tests_for_grammer/594.md
-tests_for_grammer/help2.c
-tests_for_grammer/help3.c
-tests_for_grammer/print.cpp
-tests_for_grammer/reference.txt
-tests_for_grammer/shengbin.cpp
-tests_for_grammer/test.cpp
-tests_for_grammer/test2.c
-tests_for_grammer/Untitled-1.ini
-tests_for_grammer/yanghui.cpp
-tests_for_grammer/yuanjiahao.cpp
-math/deom.wlnb
-math/ma.md
-math/mathSolt.ipynb
 python/battery_show.py
 python/demo.ipynb
-SunShineGroup/DashChart.png
-SunShineGroup/SunInSolarSystem.png
-SunShineGroup/SunInTheUniverse.png
-math/deom.wlnb
-math/ma.md
-math/mathSolt.ipynb
-SunShineGroup/DashChart.png
-SunShineGroup/SunInSolarSystem.png
-SunShineGroup/SunInTheUniverse.png
-math/deom.wlnb
-math/ma.md
-math/mathSolt.ipynb
-SunShineGroup/DashChart.png
-SunShineGroup/SunInSolarSystem.png
-SunShineGroup/SunInTheUniverse.png
-math/deom.wlnb
-math/ma.md
-math/mathSolt.ipynb
-SunShineGroup/DashChart.png
-SunShineGroup/SunInSolarSystem.png
-SunShineGroup/SunInTheUniverse.png
-math/deom.wlnb
-math/ma.md
-math/mathSolt.ipynb
-SunShineGroup/DashChart.png
-SunShineGroup/SunInSolarSystem.png
-SunShineGroup/SunInTheUniverse.png
-tests_for_grammer/backup.c
-tests_for_grammer/backup.c
-tests_for_grammer/IOCCC1.c
-tests_for_grammer/floydWarshell.java
-.VSCodeCounter/2021-10-30_23-45-32/details.md
-.VSCodeCounter/2021-10-30_23-45-32/results.csv
-.VSCodeCounter/2021-10-30_23-45-32/results.md
-.VSCodeCounter/2021-10-30_23-45-32/results.txt
-tests_for_grammer/copilot.js
-tests_for_grammer/LongestPath.cpp
-math/deom.wlnb
-math/ma.md
-math/mathSolt.ipynb
-.VSCodeCounter/2021-10-30_23-45-32/details.md
-.VSCodeCounter/2021-10-30_23-45-32/results.csv
-.VSCodeCounter/2021-10-30_23-45-32/results.md
-.VSCodeCounter/2021-10-30_23-45-32/results.txt
-.VSCodeCounter/2021-10-30_23-45-32/details.md
-.VSCodeCounter/2021-10-30_23-45-32/results.csv
-.VSCodeCounter/2021-10-30_23-45-32/results.md
-.VSCodeCounter/2021-10-30_23-45-32/results.txt
-.VSCodeCounter/2021-12-17_19-13-14/details.md
-.VSCodeCounter/2021-12-17_19-13-14/results.csv
-.VSCodeCounter/2021-12-17_19-13-14/results.md
-.VSCodeCounter/2021-12-17_19-13-14/results.txt
-tests_for_grammer/leetcode1078.c
-tests_for_grammer/strcatFun.c
-SunShineGroup/DashChart.png
-SunShineGroup/SunInSolarSystem.png
-SunShineGroup/SunInTheUniverse.png
-genericity泛型/堆栈的泛型模拟.c
-tests_for_grammer/1345.cpp
-tests_for_grammer/1036. Escape a Large Maze.cpp
-tests_for_grammer/backup.c
-tests_for_grammer/ccfpolan.cpp
-tests_for_grammer/help.c
-tests_for_grammer/leetcode14test.c
-tests_for_grammer/MM.c
-tests_for_grammer/MM2.c
-tests_for_grammer/new.c
-tests_for_grammer/new2.c
-tests_for_grammer/test.py
-Other/Test/8.cpp
-Other/Test/438. Find All Anagrams in a String.md
-Other/Test/506.md
-Other/Test/594.md
-Other/Test/1036. Escape a Large Maze.cpp
-Other/Test/1345.cpp
-Other/Test/backup.c
-Other/Test/ccfpolan.cpp
-Other/Test/copilot.js
-Other/Test/floydWarshell.java
-Other/Test/h1.cpp
-Other/Test/h2.c
-Other/Test/h3.c
-Other/Test/h4.c
-Other/Test/help.c
-Other/Test/help2.c
-Other/Test/help3.c
-Other/Test/IOCCC1.c
-Other/Test/leetcode14test.c
-Other/Test/leetcode1078.c
-Other/Test/LongestPath.cpp
-Other/Test/MM.c
-Other/Test/MM2.c
-Other/Test/new.c
-Other/Test/new2.c
-Other/Test/print.cpp
-Other/Test/reference.txt
-Other/Test/shengbin.cpp
-Other/Test/strcatFun.c
-Other/Test/test.cpp
-Other/Test/test.py
-Other/Test/test2.c
-Other/Test/Untitled-1.ini
-Other/Test/yanghui.cpp
-Other/Test/yuanjiahao.cpp
-Other/Test/cs144_lab2.cpp
-Other/Test/department.sql
-Other/Test/my.sql
-Other/Test/subset.cpp
+leetcode/unfinish
+.VSCodeCounter/
+Other/Test/
 exe/*
-Other\Test\*.*
-Other\Test\??.drawio
-Other\Test\??.png
-Other\Test\random.cpp
-Other\Test\striingop.cpp
-Other/Test/??.drawio
-Other/Test/??.png
-Other/Test/random.cpp
-Other/Test/striingop.cpp
-Other/Test/??.drawio
-Other/Test/??.png
